2004-10-31  Roland Mas  <99.roland.mas@aist.enst.fr>

	* db/20041031.sql: New file, containing views to be used by the
	MTAs.
	* continued work on replacing LDAP by direct PostgreSQL lookups:
	Exim4 and Postfix done.

2004-10-27  Guillaume Smet <guillaume-gforge@smet.org>

	* improved layout consistency in /my/ page
	* fixed some missing references in /my/ page
	* improved error handling in BaseLanguage.class and in
	PluginManager.class
	* finally fixed the default priority problem
	* fixed typos and wrong translations related to project manager
	in French translation

2004-10-26  Tim Perdue <tim@gforge.org>

	* Fixed cronjobs/cvs-cron/cvs.php so it generates a working 
	readers/passwd file
	* Fixed www/register/projectinfo.php so it uses sys_cvs_host 
	to fill in scm_host by default.

2004-10-24  Roland Mas  <99.roland.mas@aist.enst.fr>

	* common/include/system/pgsql.class: New file.
	* started replacing LDAP lookups by PostgreSQL lookups: NSS done.

2004-10-22  Tim Perdue <tim@gforge.org>

	* Changed db/gforge3.sql to db/gforge.sql - gforge.sql is 
	current snapshot as of 2004-10-22

2004-10-22  Tom Copeland <tom@infoether.com>

	* www/news/submit.php - Fixed bug [#918] news description 
	length is wrongly checked.

2004-10-21  Christian Bayle <bayle@aist.enst.fr>

	* replaced PortugueseBrazilian.tab with the one provided by 
	Marcelo Minholi

2004-10-20  Guillaume Smet <guillaume-gforge@smet.org>

	* fixed default priority level and priority colors box

2004-10-17  Guillaume Smet <guillaume-gforge@smet.org>

	* made cron manager usable by adding pagination

2004-10-16  Guillaume Smet <guillaume-gforge@smet.org>

	* reorganized search engine code and made it more flexible
	* localized news
	* fixed a few localization problems
	* fixed and updated French translation

2004-10-15  Guillaume Smet <guillaume-gforge@smet.org>

	* put back in link to forum in notification mail

2004-10-14  GForge Group <luis@gforgegroup.com>

	* Added a text-only ultralite theme
