@@ -1,3 +1,7 @@
+2004-10-26  Tim Perdue <tim@gforge.org>
+
+	* db/20041104/sql - new file expands size of groups.scm_box field
+
 2004-10-31  Roland Mas  <99.roland.mas@aist.enst.fr>
 
 	* db/20041031.sql: New file, containing views to be used by the
